--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone:
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://silgm.github.io/SilgmBlogPublish
-root: /SilgmBlogPublish
+root: /SilgmBlogPublish/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 
@@ -49,7 +49,7 @@ highlight:
 # per_page: Posts displayed per page. (0 = disable pagination)
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
-  path: ''
+  path: '/SilgmBlogPublish/'
   per_page: 10
   order_by: -date
   
