--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://silgm.github.io/SilgmBlogPublish
-root: /SilgmBlogPublish/
+url: https://silgm.github.io
+root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 
@@ -101,6 +101,6 @@ jsonContent:
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/Silgm/SilgmBlogPublish.git
+  repo: https://github.com/Silgm/silgm.github.io.git
   branch: master
   message: 
